--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node api/generate-guide.js"
   },
   "dependencies": {
-    "puppeteer": "^23.0.0"
+    "puppeteer": "^23.0.0",
+    "chrome-aws-lambda": "^10.1.0"
   },
   "engines": {
     "node": "22.x"
