--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "node api/generate-guide.js"
   },
   "dependencies": {
-    "puppeteer": "^23.0.0",
-    "chrome-aws-lambda": "^10.1.0"
+    "puppeteer-core": "^23.0.0",
+    "@sparticuz/chromium": "^121.0.0"
   },
   "engines": {
     "node": "22.x"
