--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "node api/generate-guide.js"
   },
   "dependencies": {
-    "puppeteer-core": "^23.0.0",
-    "@sparticuz/chromium": "^121.0.0"
+    "playwright-aws-lambda": "^0.10.0",
+    "playwright-core": "^1.40.0"
   },
   "engines": {
     "node": "22.x"
