--- a/package.json
+++ b/package.json
@@ -1,16 +1,8 @@
 {
   "name": "cruise-guide-automation",
   "version": "1.0.0",
-  "description": "Automated cruise guide generation using Perplexity",
-  "main": "api/generate-guide.js",
-  "scripts": {
-    "start": "node api/generate-guide.js"
-  },
   "dependencies": {
-    "playwright-aws-lambda": "^0.10.0",
-    "playwright-core": "^1.40.0"
-  },
-  "engines": {
-    "node": "22.x"
+    "playwright": "^1.40.0",
+    "playwright-chromium": "^1.40.0"
   }
 }
